small profession refactor, lots of tutorials etc

--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -20,7 +20,7 @@
 "block.mmorpg.station.salvaging": "Salvage Station",
 "block.mmorpg.station.cooking": "Cooking Station",
 "block.mmorpg.station.alchemy": "Alchemy Station",
-"block.mmorpg.station.enchanting": "Enchanting Station",
+"block.mmorpg.station.enchanting": "Infusing Station",
 "block.mmorpg.station.gear_crafting": "Gear Crafting Station",
 
 
