--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,12 @@
 Changelog of recent updates: https://github.com/RobertSkalko/Mine-And-Slash-Rework/blob/1.20-Forge/changelogs/v.5.5.txt
 
-v.5.5.29
+v.5.6.0
+- Medium Profession refactor:
+ * easier to understand recipes
+ * all recipes now have a tier item + rarity item
+ * removed rare gathering mats
+ * removed the lesser, greater etc items, drops, stats
+ 
 - datapack warnings are now printed to each player that logs in, but only a short summary
 - unbound key should now show that and not just "N"
 - new feature: everyone is ally. When spells target only allies, this means they will target anything
@@ -31,3 +37,6 @@ Previously point configs were spread to both configs and datapacks, and each use
 To be safe, i'll go with limiting each proc with spell cooldown
 - new info area_level command to see how area lvl was calculated
 - added cheat_give points command, so you don't need to edit datapacks to remove point limits for testing
+- stations are now separate guis, have names, can click to show recipes etc
+- improved consumable buff item tooltips
+- new set_tier_nbt boolean to prof recipes, in case you want to craft something that doesnt set tier nbt
