--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,50 +1,4 @@
-Changelog of recent updates: https://github.com/RobertSkalko/Mine-And-Slash-Rework/blob/1.20-Forge/changelogs/v.5.5.txt
+Changelog of recent updates: https://github.com/RobertSkalko/Mine-And-Slash-Rework/blob/1.20-Forge/changelogs/v.5.6.txt
 
-v.5.6.0
-- Medium Profession refactor:
- * easier to understand recipes
- * all recipes now have a tier item + rarity item
- * removed rare gathering mats
- * removed the lesser, greater etc items, drops, stats
- 
-- datapack warnings are now printed to each player that logs in, but only a short summary
-- unbound key should now show that and not just "N"
-- new feature: everyone is ally. When spells target only allies, this means they will target anything
-- reset spell cooldowns command now merged with other reset player data commands
-- small rename of command reset_player_data > reset player_data
-- MODPACK WARNING: all point types like (talents, spells etc) are now in the game balance datapack! 
-They now use the same system so i can more easily allow stuff like bonus points for stuff besides talents. (bonus talent points will be preserved for now as legacy code)
-Previously point configs were spread to both configs and datapacks, and each used different methods..
-- added give and reset bonus point commands to all point types now, removed the old talent point commands
-- changed favor_per_second in rarity datapack to favor_per_hour
-- renamed age of exile package to mine and slash, otherwise loggers would confuse people because package name was age_of_exile
-- switched to using loggers so they actually write to log file
-- reset potions reworked. Now ALL point types have their own full reset potions and point resets
-- you can now remove singular spell, passive, and stat points
-- resetting talents no longer resets ascendancy
-- asc points now use different reset points potion
-- reset potion ids changed btw
-- reset points potion now give 10 instead of 5 points
-- added can_have_runewords to rarity datapack
-- runes, gems, augment and supp gems now show what level they start dropping at 
-- more misc tooltip tweaks
-- doubled unarmed energy cost
-- removed ALWAYS_SCALE_MOB_LEVEL_TO_PLAYER config because the datapack for it exists (per dimension), and it confused players
-- added give watcher_eye_jewel command
-- fixed watcher eye tooltips
-- proc stats now properly set the cooldown of the spell procced and will not cast if the spell is on cooldown.
-- removed can_proc_from_procs because not possible to ensure all the following things arent procs.. Like say you proc chill blast, which procs freeze/shatter, which procs ... 
-To be safe, i'll go with limiting each proc with spell cooldown. This means currently all procs can proc from procs too. So try to make the proc conditions a bit more strict if needed, or more chance-y
-- new info area_level command to see how area lvl was calculated
-- added cheat_give points command, so you don't need to edit datapacks to remove point limits for testing
-- stations are now separate guis, have names, can click to show recipes etc
-- improved consumable buff item tooltips
-- new set_tier_nbt boolean to prof recipes, in case you want to craft something that doesnt set tier nbt
-- foods and infusions now have rarity glint backgrounds
-- foods now show duration
-- supp gems and auras now unequip if too low level
-- swap button added to overlay, shows swap key if hub is open
-- prophecy coins are now items. You can now save them in-between maps but they now come in leveled tiers.
-Hopefully they feel more tangible now, and players can now share or distribute them. And hope no exploits
-- prophecy curses are now an actual card-picker gui
-- lowered radius of nearby mobs prophecy altar check
+v.5.6.1
+- can now right click jewels to open gui to equip them
