--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -175,6 +175,7 @@
 	"mmorpg.grouped_stat_section.regen": "Regen Stats",
 	"mmorpg.item_tips.affix_stats": "Affix Stats: ",
 	"mmorpg.item_tips.alt_tip": "[Alt]: Desc",
+	"mmorpg.item_tips.augment_explanation": "Enhances Player stats when equipped.",
 	"mmorpg.item_tips.aura_reservation": "Aura Reservation: ",
 	"mmorpg.item_tips.buff_consumable_duration_minutes": "Duration: %1$s minutes",
 	"mmorpg.item_tips.buff_consumable_info": "You can have One Consumable active per each type:\nElixirs, Meals and Seafoods.",
@@ -238,6 +239,7 @@
 	"mmorpg.item_tips.stone_repaire_durability": "Repairs %1$s durability.",
 	"mmorpg.item_tips.suffix_stats": "Suffix Stats: ",
 	"mmorpg.item_tips.support_gem_cost": "Resource Cost Multiplier: %1$s%%",
+	"mmorpg.item_tips.support_gem_explanation": "Boost the power of the Spell it's socketed into.",
 	"mmorpg.item_tips.support_gem_only_one": "Only One Allowed: ",
 	"mmorpg.item_tips.tier_influence": "Tier Influence For Mob",
 	"mmorpg.item_tips.tier_tip": "Tier %1$s",
@@ -598,10 +600,10 @@
 
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
 	"mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
@@ -610,24 +612,24 @@
 	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
@@ -636,8 +638,8 @@
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
@@ -646,8 +648,8 @@
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -681,7 +683,7 @@
 	"mmorpg.effect.power_charge": "Power Charge",
 	"mmorpg.effect.rejuvenation": "Rejuvenation",
 	"mmorpg.effect.shred": "Shred",
-	"mmorpg.effect.slow": "Slow",
+	"mmorpg.effect.slow": "Lethargy",
 	"mmorpg.effect.stun": "Stun",
 	"mmorpg.effect.taunt_stance": "Taunt Stance",
 	"mmorpg.effect.thorn": "Thorn",
@@ -1115,7 +1117,7 @@
 	"mmorpg.stat.chaining_spell_dmg": "Chaining Spell Tag Damage",
 	"mmorpg.stat.chaining_spell_dmg_taken": "Chaining Damage Taken",
 	"mmorpg.stat.chance_of_blind": "\u00A77Your \u00A75\u2600 Chaos\u00A77 Attacks have \u00A7a[VAL1]%\u00A77 chance of applying Blind",
-	"mmorpg.stat.chance_of_slow": "\u00A77Your \u00A76\u2600 Physical\u00A77 Attacks have \u00A7a[VAL1]%\u00A77 chance of applying Slow",
+	"mmorpg.stat.chance_of_slow": "\u00A77Your \u00A76\u2600 Physical\u00A77 Attacks have \u00A7a[VAL1]%\u00A77 chance of applying Lethargy",
 	"mmorpg.stat.chaos_ailment_aura_cost": "\u00A77Decree of Chaos Cost",
 	"mmorpg.stat.chaos_any_wep_damage": "Chaos Weapon Damage",
 	"mmorpg.stat.chaos_cast_time": "Chaos Cast Time",
@@ -1157,7 +1159,7 @@
 	"mmorpg.stat.curse_spell_dmg_taken": "Curse Damage Taken",
 	"mmorpg.stat.cursed_by_agony": "\u00A77Cursed by Physical Agony",
 	"mmorpg.stat.cursed_by_despair": "\u00A77Cursed by Despair of Chaos",
-	"mmorpg.stat.cursed_by_slow": "\u00A77Cursed by Slow",
+	"mmorpg.stat.cursed_by_slow": "\u00A77Cursed by Lethargy",
 	"mmorpg.stat.cursed_by_weak": "\u00A77Cursed by Elemental Weakness",
 	"mmorpg.stat.cursed_by_wounds": "\u00A77Cursed by Wounds",
 	"mmorpg.stat.damage_cast_time": "Damage Cast Time",
@@ -1662,7 +1664,7 @@
 	"mmorpg.stat.shout_cdr": "Shout Spell Cooldown Reduction",
 	"mmorpg.stat.shout_spell_dmg": "Shout Spell Tag Damage",
 	"mmorpg.stat.shout_spell_dmg_taken": "Shout Damage Taken",
-	"mmorpg.stat.slow_immunity": "\u00A77You are Immune to Slow",
+	"mmorpg.stat.slow_immunity": "\u00A77You are Immune to Lethargy",
 	"mmorpg.stat.song_cast_time": "Song Cast Time",
 	"mmorpg.stat.song_cdr": "Song Spell Cooldown Reduction",
 	"mmorpg.stat.song_eff_dur_u_cast": "Song Effect Duration",
@@ -1766,6 +1768,46 @@
 "_comment": " [CATEGORY]: FORMATTER - NAMES",
 
 
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
@@ -1821,46 +1863,6 @@
 	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
-	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
-	"mmorpg.gear_type.plate_pants": "Plate Pants",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Tower Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.tome": "Tome",
-	"mmorpg.gear_type.totem": "Totem",
-	"mmorpg.gearslot.boots": "Boots",
-	"mmorpg.gearslot.bow": "Bow",
-	"mmorpg.gearslot.chest": "Chest",
-	"mmorpg.gearslot.crossbow": "Crossbow",
-	"mmorpg.gearslot.helmet": "Helmet",
-	"mmorpg.gearslot.necklace": "Necklace",
-	"mmorpg.gearslot.pants": "Pants",
-	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.shield": "Shield",
-	"mmorpg.gearslot.staff": "Staff",
-	"mmorpg.gearslot.sword": "Sword",
-	"mmorpg.gearslot.tome": "Tome",
-	"mmorpg.gearslot.totem": "Totem",
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
 "_comment": " [CATEGORY]: STATPRIORITY - NAMES",
@@ -2803,7 +2805,7 @@
 	"mmorpg.profession.desc.gear_crafting": "Gear Crafting is a crafting profession that turns materials from gathering professions into new pieces of gear.",
 	"mmorpg.profession.desc.husbandry": "Animal Breeding gives you a chance to obtain extra custom materials by breeding animals.",
 	"mmorpg.profession.desc.mining": "Mining gives you chance to obtain extra custom materials by mining ores. You can see which ores give experience in the Mine and Slash HUB > Library screen.",
-	"mmorpg.profession.desc.salvaging": "Salvaging is the process of turning junk loot into useful materials in the Salvaging Station. You can only salvage Gear with Mine and Slash souls and other Mine and Slash rarity items like Support gems, jewels.",
+	"mmorpg.profession.desc.salvaging": "Salvaging is the process of turning junk loot into useful materials in the Salvaging Station. You can only salvage Gear with Mine and Slash souls and other Mine and Slash rarity items.",
 
 "_comment": " [CATEGORY]: MISC - DESCRIPTIONS",
 
@@ -2818,42 +2820,42 @@
 
 	"item.mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
 	"mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
-	"mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
 	"item.mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
+	"mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
 	"mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
 	"item.mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
 	"item.mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
 	"mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
-	"item.mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
+	"item.mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
-	"mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
 	"item.mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
+	"mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
 	"item.mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
 	"mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
-	"item.mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
+	"item.mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"item.mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"item.mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"item.mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
+	"mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
-	"mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
+	"item.mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
 	"item.mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
+	"mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
@@ -2864,8 +2866,8 @@
 	"mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
-	"mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing",
 	"item.mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing",
+	"mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing",
 	"item.mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
 	"mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
 
