--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,4 @@
 Changelog of recent updates: https://github.com/RobertSkalko/Mine-And-Slash-Rework/blob/1.20-Forge/changelogs/v.5.6.txt
 
-v.5.6.2
-- fix move speed stat and others (i didnt need to add +1 to it..)
-- fix mixin connector wrong package name
+v.5.6.3
+- fix empty affix causing null errors when searching
